--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1,93 +1,91 @@
 {
-  "nav": {
-    "home": "Startseite",
-    "about": "Über uns",
-    "services": "Dienstleistungen",
-    "howitworks": "Wie es funktioniert",
-    "casestudy": "Fallstudie",
-    "contact": "Kontakt"
-  },
-  "hero": {
-    "title": "Sparen Sie Zeit und steigern Sie Ihren Umsatz mit KI für Restaurants",
-    "subtitle": "Reduzieren Sie die Arbeitsbelastung des Personals, binden Sie Kunden und steigern Sie den Umsatz mit KI-Automatisierung",
-    "cta": {
-      "primary": "Kostenlose Testphase buchen",
-      "secondary": "So funktioniert's"
-    }
-  },
-  "about": {
-    "title": "Über uns",
-    "description": "Bei Optima AI Solutions unterstützen wir Restaurants dabei, in einer schnelllebigen Welt erfolgreich zu sein. Wir kombinieren Branchenwissen mit modernster KI, um echte Herausforderungen von Restaurants zu lösen.",
-    "mission": {
-      "title": "Unsere Mission",
-      "text": "Vereinfachen Sie Restaurantabläufe, steigern Sie den Umsatz und verbessern Sie das Gästeerlebnis durch intelligente Automatisierung – damit Sie sich auf das Wichtigste konzentrieren können: Ihre Gäste."
-    }
-  },
-  "services": {
-    "title": "Unsere Dienstleistungen",
-    "chatbots": {
-      "title": "KI-Chatbots",
-      "tag": "Website-Integration",
-      "question": "Von Anfragen überwältigt?",
-      "description": "Unsere Chatbots bearbeiten Buchungen, Stornierungen und FAQs sofort auf Ihrer Website und in sozialen Medien und binden Kunden durch personalisierte Empfehlungen zur Steigerung der Kundenbindung."
-    },
-    "voice": {
-      "title": "Sprachagenten",
-      "tag": "Telefon-Integration",
-      "question": "Verpasste Anrufe zu Stoßzeiten?",
-      "description": "Sprachagenten nehmen rund um die Uhr Anrufe entgegen, nehmen Bestellungen auf und verwalten Reservierungen, sodass sich Ihr Personal auf den persönlichen Service konzentrieren kann."
-    },
-    "whatsapp": {
-      "title": "WhatsApp-Automatisierung",
-      "tag": "Nachrichten-Integration",
-      "question": "Schwierigkeiten bei der Kundenbindung?",
-      "description": "Senden Sie automatisierte Erinnerungen, personalisierte Angebote und Feedback-Anfragen über WhatsApp, um wiederkehrende Besuche zu fördern und neue Gäste durch gezielte Kampagnen zu gewinnen."
-    }
-  },
-  "cta": {
-    "title": "Bereit, Zeit zu sparen und Ihr Restaurant wachsen zu lassen?",
-    "button": "Starten Sie Ihre kostenlose 14-tägige Testphase"
-  },
-  "contact": {
-    "title": "Kontakt",
-    "subtitle": "Bereit, Ihr Restaurant zu automatisieren? Lassen Sie uns sprechen.",
-    "form": {
-      "name": "Ihr Name",
-      "email": "Ihre E-Mail",
-      "restaurant": "Restaurant Name",
-      "message": "Ihre Nachricht",
-      "submit": "Kostenloses Beratungsgespräch vereinbaren",
-      "success": "Nachricht gesendet!"
-    }
-  },
-  "footer": {
-    "description": "Wir transformieren Restaurants mit KI-gestützten Automatisierungslösungen, die das Kundenerlebnis verbessern und Abläufe optimieren.",
-    "newsletter": {
-      "title": "Newsletter",
-      "description": "Abonnieren Sie, um die neuesten Nachrichten und Updates zu erhalten.",
-      "placeholder": "Ihre E-Mail-Adresse",
-      "button": "Abonnieren",
-      "success": "Abonniert!"
-    },
-    "contact": {
-      "title": "Kontaktinfo"
-    },
-    "quickLinks": {
-      "title": "Schnellzugriff"
-    },
-    "location": "Sitz in Deutschland, europaweit tätig",
-    "rights": "Alle Rechte vorbehalten."
-  },
-  "chatbot": {
-    "placeholder": "Nachricht eingeben...",
-    "greeting": "Hallo! Wie kann ich Ihnen heute helfen?",
-    "error": "Entschuldigung, ich habe momentan Verbindungsprobleme. Bitte versuchen Sie es später erneut."
-  },
-  "voice": {
-    "title": "Sprachassistent Demo",
-    "browserNotSupported": "Ihr Browser unterstützt keine Spracherkennung.",
-    "listening": "Ich höre zu... Sprechen Sie jetzt",
-    "clickToStart": "Klicken Sie auf das Mikrofon, um zu sprechen",
-    "error": "Entschuldigung, das habe ich nicht verstanden. Bitte versuchen Sie es erneut."
-  }
+  "navigation.home": "Startseite",
+  "navigation.about": "Über uns",
+  "navigation.services": "Dienstleistungen",
+  "navigation.howItWorks": "Wie es funktioniert",
+  "navigation.caseStudy": "Fallstudie",
+  "navigation.contact": "Kontakt",
+  "home.title": "Sparen Sie Zeit und steigern Sie den Umsatz mit KI für Hotels & Restaurants",
+  "home.subtitle": "Reduzieren Sie die Arbeitsbelastung des Personals, verbessern Sie das Gästeerlebnis und steigern Sie den Umsatz mit intelligenter Automatisierung",
+  "home.button.trial": "Kostenlose Testphase starten",
+  "home.button.howItWorks": "So funktioniert's",
+  "home.stats.response": "Schnellere Antwortzeit",
+  "home.stats.support": "Kundensupport",
+  "home.stats.bookings": "Mehr Buchungen",
+  "about.title": "Über uns",
+  "about.description": "Bei Optima AI Solutions befähigen wir Hotels und Restaurants, in einer schnelllebigen Welt erfolgreich zu sein. Wir wurden gegründet, um die Herausforderungen von Gastronomiebetrieben in ganz Europa zu bewältigen und kombinieren Branchenwissen mit modernster KI, um Abläufe zu optimieren, den Umsatz zu steigern und die Gästezufriedenheit zu erhöhen.",
+  "about.mission.title": "Unsere Mission",
+  "about.mission.text": "Vereinfachen Sie den Gastronomiebetrieb, steigern Sie den Umsatz und verbessern Sie das Gästeerlebnis durch intelligente Automatisierung – damit Sie sich auf das Wesentliche konzentrieren können: unvergessliche Erlebnisse für Ihre Gäste zu schaffen.",
+  "services.title": "Unsere Dienstleistungen",
+  "services.chatbots": "KI-Chatbots",
+  "services.voice": "Sprachagenten",
+  "services.whatsapp": "WhatsApp-Automatisierung",
+  "services.websiteIntegration": "Website-Integration",
+  "services.description": "Überwältigt von Gästeanfragen? Unsere KI-Chatbots bearbeiten Buchungen, Reservierungen und Gästeanfragen sofort auf Ihrer Website und in sozialen Medien. Sie bieten personalisierte Empfehlungen, verwalten Zimmer- und Tischbuchungen und verbessern die Gästebetreuung rund um die Uhr.",
+  "services.features.booking": "Sofortiges Buchungsmanagement",
+  "services.features.faq": "Intelligente FAQ-Antworten",
+  "services.features.multilanguage": "Mehrsprachige Unterstützung":,
+  "services.features.preferences": "Lernen von Gästepräferenzen",
+  "services.features.availability": "24/7 Verfügbarkeit",
+  "services.features.analytics": "6",
+  "services.analytics": "Analyse-Dashboard",
+  "services.button.trial": "Kostenlose Testphase starten",
+  "howItWorks.title": "Wie es funktioniert",
+  "howItWorks.step1": "Beratung".title": "Wechseln Sie Ihre Ansprache",
+  "howItWorks.step1.text": "Wir analysieren die einzigartigen Herausforderungen und Ziele Ihres Restaurants.",
+  "howItWorks.step2.title": "Anpassung",
+  "howItWorks.step2.text": "Unser Team passt KI-Lösungen nahtlos an Ihre Abläufe an.",
+  "howItWorks.step3.title": "Implementierung",
+  "howItWorks.step3.text": "Wir integrieren Chatbots, Sprachagenten und Automatisierung mit minimaler Störung.",
+  "howItWorks.step4.title": "Optimierung",
+  "howItWorks.step4.text": "Laufende Unterstützung stellt sicher, dass Ihre KI-Tools mit Ihrem Unternehmen wachsen.",
+  "caseStudy.title": "Erfolgsgeschichten",
+  "caseStudy.subtitle": "Wie führende Hotels und Restaurants in Europa ihre Abläufe mit KI transformiert haben...",
+  "caseStudy.challenges.title": "Die Herausforderungen",
+  "caseStudy.challenges.waitTimes": "Lange Wartezeiten",
+  "caseStudy.challenges.staff": "Überlastetes Personal",
+  "caseStudy.challenges.opportunities": "Verpasste Gelegenheiten",
+  "caseStudy.solution.title": "Unsere Lösung",
+  "caseStudy.solution.chatbot": "KI-Chatbot",
+  "caseStudy.solution.voice": "Sprachagent",
+  "caseStudy.results.title": "Bemerkenswerte Ergebnisse",
+  "caseStudy.results.response": "Schnellere Antwort",
+  "caseStudy.results.bookings": "Mehr Buchungen",
+  "caseStudy.results.satisfaction": "Steigerung der Gästezufriedenheit",
+  "caseStudy.results.savings": "Jährliche Einsparungen",
+  "caseStudy.benefits.title": "Wichtige Vorteile",
+  "caseStudy.benefits.operational": "Operative Exzellenz",
+  "caseStudy.benefits.revenue": "Umsatzwachstum",
+  "caseStudy.benefits.experience": "Verbessertes Erlebnis",
+  "contact.title": "Kontakt",
+  "contact.subtitle": "Bereit, Ihr Unternehmen zu automatisieren? Lassen Sie uns sprechen.",
+  "contact.whyChooseUs.title": "Warum uns wählen?",
+  "contact.whyChooseUs.support": "24/7 Unterstützung",
+  "contact.whyChooseUs.guidance": "Expertenberatung",
+  "contact.form.name": "Ihr Name",
+  "contact.form.email": "Ihre E-Mail",
+  "contact.form.restaurant": "Restaurant Name",
+  "contact.form.message": "Ihre Nachricht",
+  "contact.form.button": "Kostenloses Beratungsgespräch vereinbaren",
+  "footer.title": "Optima AI Solutions",
+  "footer.description": "Transformieren von Hotels und Restaurants mit KI-gestützten Automatisierungslösungen, die das Gästeerlebnis verbessern und Abläufe optimieren.",
+  "footer.quickLinks.title": "Schnellzugriff",
+  "footer.quickLinks.home": "Startseite",
+  "footer.quickLinks.about": "Über uns",
+  "footer.quickLinks.services": "Dienstleistungen",
+  "footer.quickLinks.howItWorks": "Wie es funktioniert",
+  "footer.quickLinks.contact": "Kontakt",
+  "footer.contact.title": "Kontakt",
+  "footer.contact.email": "info@optimaai.co",
+  "footer.contact.phone": "+491622968335",
+  "footer.location": "Sitz in Deutschland, europaweit tätig",
+  "footer.newsletter.title": "Newsletter",
+  "footer.newsletter.description": "Abonnieren Sie unseren Newsletter für die neuesten Updates und Einblicke.",
+  "footer.newsletter.placeholder": "Ihre E-Mail-Adresse",
+  "footer.newsletter.button": "Abonnieren",
+  "footer.copyright": "© 2025 Optima AI Solutions. Alle Rechte vorbehalten.",
+  "chatbot.greeting": "Probieren Sie mich aus! 👋",
+  "chatbot.button": "Ein Gespräch beginnen",
+  "cookies.text": "Wir verwenden Cookies, um Ihr Erlebnis zu verbessern. Durch die weitere Nutzung dieser Website stimmen Sie der Verwendung von Cookies zu.",
+  "cookies.button": "Cookies akzeptieren"
 }
