--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -5,7 +5,7 @@
   "navigation.howItWorks": "Wie es funktioniert",
   "navigation.caseStudy": "Fallstudie",
   "navigation.contact": "Kontakt",
-  "home.title": "Sparen Sie Zeit und steigern Sie den Umsatz mit KI für Hotels & Restaurants",
+  "home.title": "Sparen Sie Zeit und steigern Sie Ihren Umsatz mit KI für Hotels & Restaurants",
   "home.subtitle": "Reduzieren Sie die Arbeitsbelastung des Personals, verbessern Sie das Gästeerlebnis und steigern Sie den Umsatz mit intelligenter Automatisierung",
   "home.button.trial": "Kostenlose Testphase starten",
   "home.button.howItWorks": "So funktioniert's",
@@ -24,14 +24,13 @@
   "services.description": "Überwältigt von Gästeanfragen? Unsere KI-Chatbots bearbeiten Buchungen, Reservierungen und Gästeanfragen sofort auf Ihrer Website und in sozialen Medien. Sie bieten personalisierte Empfehlungen, verwalten Zimmer- und Tischbuchungen und verbessern die Gästebetreuung rund um die Uhr.",
   "services.features.booking": "Sofortiges Buchungsmanagement",
   "services.features.faq": "Intelligente FAQ-Antworten",
-  "services.features.multilanguage": "Mehrsprachige Unterstützung":,
+  "services.features.multilanguage": "Mehrsprachige Unterstützung",
   "services.features.preferences": "Lernen von Gästepräferenzen",
   "services.features.availability": "24/7 Verfügbarkeit",
-  "services.features.analytics": "6",
   "services.analytics": "Analyse-Dashboard",
   "services.button.trial": "Kostenlose Testphase starten",
   "howItWorks.title": "Wie es funktioniert",
-  "howItWorks.step1": "Beratung".title": "Wechseln Sie Ihre Ansprache",
+  "howItWorks.step1.title": "Beratung",
   "howItWorks.step1.text": "Wir analysieren die einzigartigen Herausforderungen und Ziele Ihres Restaurants.",
   "howItWorks.step2.title": "Anpassung",
   "howItWorks.step2.text": "Unser Team passt KI-Lösungen nahtlos an Ihre Abläufe an.",
@@ -40,7 +39,7 @@
   "howItWorks.step4.title": "Optimierung",
   "howItWorks.step4.text": "Laufende Unterstützung stellt sicher, dass Ihre KI-Tools mit Ihrem Unternehmen wachsen.",
   "caseStudy.title": "Erfolgsgeschichten",
-  "caseStudy.subtitle": "Wie führende Hotels und Restaurants in Europa ihre Abläufe mit KI transformiert haben...",
+  "caseStudy.subtitle": "Wie führende Hotels und Restaurants in Europa ihre Abläufe mit KI transformiert haben.",
   "caseStudy.challenges.title": "Die Herausforderungen",
   "caseStudy.challenges.waitTimes": "Lange Wartezeiten",
   "caseStudy.challenges.staff": "Überlastetes Personal",
