--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -13,21 +13,24 @@
   "home.stats.support": "Kundensupport",
   "home.stats.bookings": "Mehr Buchungen",
   "about.title": "Über uns",
-  "about.description": "Bei Optima AI Solutions befähigen wir Hotels und Restaurants, in einer schnelllebigen Welt erfolgreich zu sein. Wir wurden gegründet, um die Herausforderungen von Gastronomiebetrieben in ganz Europa zu bewältigen und kombinieren Branchenwissen mit modernster KI, um Abläufe zu optimieren, den Umsatz zu steigern und die Gästezufriedenheit zu erhöhen.",
+  "about.description": "Bei Optima AI Solutions unterstützen wir Hotels und Restaurants dabei, in einer schnelllebigen Welt erfolgreich zu sein. Wir wurden gegründet, um die Herausforderungen von Gastronomiebetrieben in ganz Europa zu lösen, indem wir Branchenkenntnisse mit modernster KI-Technologie kombinieren.",
   "about.mission.title": "Unsere Mission",
-  "about.mission.text": "Vereinfachen Sie den Gastronomiebetrieb, steigern Sie den Umsatz und verbessern Sie das Gästeerlebnis durch intelligente Automatisierung – damit Sie sich auf das Wesentliche konzentrieren können: unvergessliche Erlebnisse für Ihre Gäste zu schaffen.",
+  "about.mission.text": "Wir vereinfachen den Betrieb, steigern den Umsatz und verbessern das Gästeerlebnis durch intelligente Automatisierung – damit Sie sich auf das konzentrieren können, was wirklich zählt: unvergessliche Erlebnisse für Ihre Gäste.",
+  "about.visionTitle": "Unsere Vision",
+  "about.visionText": "Die Gastronomie durch KI-gestützte Automatisierung zu revolutionieren – für mehr Effizienz und außergewöhnliche Gästeerlebnisse.",
+  "about.startJourney": "Beginnen Sie Ihre Reise",
   "services.title": "Unsere Dienstleistungen",
   "services.chatbots": "KI-Chatbots",
   "services.voice": "Sprachagenten",
   "services.whatsapp": "WhatsApp-Automatisierung",
   "services.websiteIntegration": "Website-Integration",
-  "services.description": "Überwältigt von Gästeanfragen? Unsere KI-Chatbots bearbeiten Buchungen, Reservierungen und Gästeanfragen sofort auf Ihrer Website und in sozialen Medien. Sie bieten personalisierte Empfehlungen, verwalten Zimmer- und Tischbuchungen und verbessern die Gästebetreuung rund um die Uhr.",
+  "services.description": "Überwältigt von Gästeanfragen? Unsere KI-Chatbots bearbeiten Buchungen, Stornierungen und FAQs sofort auf Ihrer Website und in sozialen Medien und binden Kunden durch personalisierte Empfehlungen.",
   "services.features.booking": "Sofortiges Buchungsmanagement",
   "services.features.faq": "Intelligente FAQ-Antworten",
   "services.features.multilanguage": "Mehrsprachige Unterstützung",
   "services.features.preferences": "Lernen von Gästepräferenzen",
   "services.features.availability": "24/7 Verfügbarkeit",
-  "services.analytics": "Analyse-Dashboard",
+  "services.features.analytics": "Analyse-Dashboard",
   "services.button.trial": "Kostenlose Testphase starten",
   "howItWorks.title": "Wie es funktioniert",
   "howItWorks.step1.title": "Beratung",
@@ -43,7 +46,7 @@
   "caseStudy.challenges.title": "Die Herausforderungen",
   "caseStudy.challenges.waitTimes": "Lange Wartezeiten",
   "caseStudy.challenges.staff": "Überlastetes Personal",
-  "caseStudy.challenges.opportunities": "Verpasste Gelegenheiten",
+  "caseStudy.challenges.opportunities": "Verpasste Chancen",
   "caseStudy.solution.title": "Unsere Lösung",
   "caseStudy.solution.chatbot": "KI-Chatbot",
   "caseStudy.solution.voice": "Sprachagent",
@@ -53,21 +56,23 @@
   "caseStudy.results.satisfaction": "Steigerung der Gästezufriedenheit",
   "caseStudy.results.savings": "Jährliche Einsparungen",
   "caseStudy.benefits.title": "Wichtige Vorteile",
-  "caseStudy.benefits.operational": "Operative Exzellenz",
+  "caseStudy.benefits.operational": "Betriebliche Exzellenz",
   "caseStudy.benefits.revenue": "Umsatzwachstum",
-  "caseStudy.benefits.experience": "Verbessertes Erlebnis",
+  "caseStudy.benefits.experience": "Besseres Gästeerlebnis",
   "contact.title": "Kontakt",
   "contact.subtitle": "Bereit, Ihr Unternehmen zu automatisieren? Lassen Sie uns sprechen.",
   "contact.whyChooseUs.title": "Warum uns wählen?",
-  "contact.whyChooseUs.support": "24/7 Unterstützung",
-  "contact.whyChooseUs.guidance": "Expertenberatung",
+  "contact.whyChooseUs.support": "24/7 KI-Support",
+  "contact.whyChooseUs.guidance": "Fachkundiges Team",
+  "contact.whyChooseUs.response": "Schnelle Antwort",
+  "contact.whyChooseUs.direct": "Direkter Kontakt",
   "contact.form.name": "Ihr Name",
   "contact.form.email": "Ihre E-Mail",
-  "contact.form.restaurant": "Restaurant Name",
-  "contact.form.message": "Ihre Nachricht",
+  "contact.form.restaurant": "Name des Restaurants",
+  "contact.form.message": "Erzählen Sie uns von Ihrem Restaurant und Ihren Herausforderungen...",
   "contact.form.button": "Kostenloses Beratungsgespräch vereinbaren",
   "footer.title": "Optima AI Solutions",
-  "footer.description": "Transformieren von Hotels und Restaurants mit KI-gestützten Automatisierungslösungen, die das Gästeerlebnis verbessern und Abläufe optimieren.",
+  "footer.description": "Transformieren Sie Hotels und Restaurants mit KI-gestützter Automatisierung, die das Gästeerlebnis verbessert und den Betrieb vereinfacht.",
   "footer.quickLinks.title": "Schnellzugriff",
   "footer.quickLinks.home": "Startseite",
   "footer.quickLinks.about": "Über uns",
@@ -84,7 +89,7 @@
   "footer.newsletter.button": "Abonnieren",
   "footer.copyright": "© 2025 Optima AI Solutions. Alle Rechte vorbehalten.",
   "chatbot.greeting": "Probieren Sie mich aus! 👋",
-  "chatbot.button": "Ein Gespräch beginnen",
+  "chatbot.button": "💬 Chatten Sie mit unserem KI-Agenten",
   "cookies.text": "Wir verwenden Cookies, um Ihr Erlebnis zu verbessern. Durch die weitere Nutzung dieser Website stimmen Sie der Verwendung von Cookies zu.",
   "cookies.button": "Cookies akzeptieren"
 }
