--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -6,22 +6,25 @@
   "navigation.caseStudy": "Case Study",
   "navigation.contact": "Contact",
   "home.title": "Save Time and Boost Revenue with AI for Hotels & Restaurants",
-  "home.subtitle": "Reduce staff workload, improve guest experience, and increase revenue with intelligent automation",
+  "home.subtitle": "Reduce staff workload, enhance guest experience, and grow revenue with intelligent automation",
   "home.button.trial": "Start Your Free Trial",
-  "home.button.howItWorks": "How It Works",
+  "home.button.howItWorks": "See How It Works",
   "home.stats.response": "Faster Response Time",
   "home.stats.support": "Customer Support",
   "home.stats.bookings": "More Bookings",
   "about.title": "About Us",
-  "about.description": "At Optima AI Solutions, we empower hotels and restaurants to thrive in a fast-paced world...",
+  "about.description": "At Optima AI Solutions, we empower hotels and restaurants to thrive in a fast-paced world. We were founded to address the challenges faced by hospitality businesses across Europe by combining industry knowledge with cutting-edge AI.",
   "about.mission.title": "Our Mission",
-  "about.mission.text": "Simplify hospitality operations, boost revenue, and enhance guest experiences...",
+  "about.mission.text": "Simplify hospitality operations, boost revenue, and enhance guest experiences through intelligent automation—so you can focus on what matters most: creating memorable guest experiences.",
+  "about.visionTitle": "Our Vision",
+  "about.visionText": "To revolutionize the hospitality industry by making AI-powered automation accessible to every restaurant and hotel, enabling them to deliver exceptional guest experiences while maximizing operational efficiency.",
+  "about.startJourney": "Start Your Journey",
   "services.title": "Our Services",
   "services.chatbots": "AI Chatbots",
   "services.voice": "Voice Agents",
   "services.whatsapp": "WhatsApp Automation",
   "services.websiteIntegration": "Website Integration",
-  "services.description": "Overwhelmed by guest inquiries? Our AI chatbots handle bookings...",
+  "services.description": "Overwhelmed by guest inquiries? Our AI chatbots handle bookings, cancellations, and FAQs instantly on your website and social media, providing personalized recommendations and increasing engagement 24/7.",
   "services.features.booking": "Instant Booking Management",
   "services.features.faq": "Smart FAQ Responses",
   "services.features.multilanguage": "Multi-language Support",
@@ -39,7 +42,7 @@
   "howItWorks.step4.title": "Optimization",
   "howItWorks.step4.text": "Ongoing support ensures your AI tools evolve with your business.",
   "caseStudy.title": "Success Stories",
-  "caseStudy.subtitle": "How leading hotels and restaurants across Europe transformed their operations...",
+  "caseStudy.subtitle": "How leading hotels and restaurants across Europe transformed their operations with AI.",
   "caseStudy.challenges.title": "The Challenges",
   "caseStudy.challenges.waitTimes": "Long Wait Times",
   "caseStudy.challenges.staff": "Staff Overwhelm",
@@ -59,15 +62,17 @@
   "contact.title": "Contact",
   "contact.subtitle": "Ready to automate your business? Let’s talk.",
   "contact.whyChooseUs.title": "Why Choose Us?",
-  "contact.whyChooseUs.support": "24/7 Support",
-  "contact.whyChooseUs.guidance": "Expert Guidance",
+  "contact.whyChooseUs.support": "24/7 AI Support",
+  "contact.whyChooseUs.guidance": "Expert Team",
+  "contact.whyChooseUs.response": "Quick Response",
+  "contact.whyChooseUs.direct": "Direct Contact",
   "contact.form.name": "Your Name",
   "contact.form.email": "Your Email",
   "contact.form.restaurant": "Restaurant Name",
-  "contact.form.message": "Your Message",
+  "contact.form.message": "Tell us about your restaurant and challenges...",
   "contact.form.button": "Schedule a Free Consultation",
   "footer.title": "Optima AI Solutions",
-  "footer.description": "Transforming hotels and restaurants with AI-powered automation solutions...",
+  "footer.description": "Transforming hotels and restaurants with AI-powered automation solutions that enhance guest experience and streamline operations.",
   "footer.quickLinks.title": "Quick Links",
   "footer.quickLinks.home": "Home",
   "footer.quickLinks.about": "About Us",
@@ -84,7 +89,7 @@
   "footer.newsletter.button": "Subscribe",
   "footer.copyright": "© 2025 Optima AI Solutions. All Rights Reserved.",
   "chatbot.greeting": "Try me out! 👋",
-  "chatbot.button": "Start a conversation",
+  "chatbot.button": "💬 Chat with our AI Agent",
   "cookies.text": "We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies.",
   "cookies.button": "Accept Cookies"
 }
