--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,95 +1,205 @@
 {
-  "navigation.home": "Home",
-  "navigation.about": "About Us",
-  "navigation.services": "Services",
-  "navigation.howItWorks": "How It Works",
-  "navigation.caseStudy": "Case Study",
-  "navigation.contact": "Contact",
-  "home.title": "Save Time and Boost Revenue with AI for Hotels & Restaurants",
-  "home.subtitle": "Reduce staff workload, enhance guest experience, and grow revenue with intelligent automation",
-  "home.button.trial": "Start Your Free Trial",
-  "home.button.howItWorks": "See How It Works",
-  "home.stats.response": "Faster Response Time",
-  "home.stats.support": "Customer Support",
-  "home.stats.bookings": "More Bookings",
-  "about.title": "About Us",
-  "about.description": "At Optima AI Solutions, we empower hotels and restaurants to thrive in a fast-paced world. We were founded to address the challenges faced by hospitality businesses across Europe by combining industry knowledge with cutting-edge AI.",
-  "about.mission.title": "Our Mission",
-  "about.mission.text": "Simplify hospitality operations, boost revenue, and enhance guest experiences through intelligent automation—so you can focus on what matters most: creating memorable guest experiences.",
-  "about.visionTitle": "Our Vision",
-  "about.visionText": "To revolutionize the hospitality industry by making AI-powered automation accessible to every restaurant and hotel, enabling them to deliver exceptional guest experiences while maximizing operational efficiency.",
-  "about.startJourney": "Start Your Journey",
-  "services.title": "Our Services",
-  "services.chatbots": "AI Chatbots",
-  "services.voice": "Voice Agents",
-  "services.whatsapp": "WhatsApp Automation",
-  "services.websiteIntegration": "Website Integration",
-  "services.description": "Overwhelmed by guest inquiries? Our AI chatbots handle bookings, cancellations, and FAQs instantly on your website and social media, providing personalized recommendations and increasing engagement 24/7.",
-  "services.features.booking": "Instant Booking Management",
-  "services.features.faq": "Smart FAQ Responses",
-  "services.features.multilanguage": "Multi-language Support",
-  "services.features.preferences": "Guest Preference Learning",
-  "services.features.availability": "24/7 Availability",
-  "services.features.analytics": "Analytics Dashboard",
-  "services.button.trial": "Start Your Free Trial",
-  "howItWorks.title": "How It Works",
-  "howItWorks.step1.title": "Consultation",
-  "howItWorks.step1.text": "We analyze your restaurant's unique challenges and goals.",
-  "howItWorks.step2.title": "Customization",
-  "howItWorks.step2.text": "Our team tailors AI solutions to fit your operations seamlessly.",
-  "howItWorks.step3.title": "Implementation",
-  "howItWorks.step3.text": "We integrate chatbots, voice agents, and automation with minimal disruption.",
-  "howItWorks.step4.title": "Optimization",
-  "howItWorks.step4.text": "Ongoing support ensures your AI tools evolve with your business.",
-  "caseStudy.title": "Success Stories",
-  "caseStudy.subtitle": "How leading hotels and restaurants across Europe transformed their operations with AI.",
-  "caseStudy.challenges.title": "The Challenges",
-  "caseStudy.challenges.waitTimes": "Long Wait Times",
-  "caseStudy.challenges.staff": "Staff Overwhelm",
-  "caseStudy.challenges.opportunities": "Missed Opportunities",
-  "caseStudy.solution.title": "Our Solution",
-  "caseStudy.solution.chatbot": "AI Chatbot",
-  "caseStudy.solution.voice": "Voice Agent",
-  "caseStudy.results.title": "Remarkable Results",
-  "caseStudy.results.response": "Faster Response",
-  "caseStudy.results.bookings": "More Bookings",
-  "caseStudy.results.satisfaction": "Increase in Guest Satisfaction",
-  "caseStudy.results.savings": "Annual Savings",
-  "caseStudy.benefits.title": "Key Benefits",
-  "caseStudy.benefits.operational": "Operational Excellence",
-  "caseStudy.benefits.revenue": "Revenue Growth",
-  "caseStudy.benefits.experience": "Enhanced Experience",
-  "contact.title": "Contact",
-  "contact.subtitle": "Ready to automate your business? Let’s talk.",
-  "contact.whyChooseUs.title": "Why Choose Us?",
-  "contact.whyChooseUs.support": "24/7 AI Support",
-  "contact.whyChooseUs.guidance": "Expert Team",
-  "contact.whyChooseUs.response": "Quick Response",
-  "contact.whyChooseUs.direct": "Direct Contact",
-  "contact.form.name": "Your Name",
-  "contact.form.email": "Your Email",
-  "contact.form.restaurant": "Restaurant Name",
-  "contact.form.message": "Tell us about your restaurant and challenges...",
-  "contact.form.button": "Schedule a Free Consultation",
-  "footer.title": "Optima AI Solutions",
-  "footer.description": "Transforming hotels and restaurants with AI-powered automation solutions that enhance guest experience and streamline operations.",
-  "footer.quickLinks.title": "Quick Links",
-  "footer.quickLinks.home": "Home",
-  "footer.quickLinks.about": "About Us",
-  "footer.quickLinks.services": "Services",
-  "footer.quickLinks.howItWorks": "How It Works",
-  "footer.quickLinks.contact": "Contact",
-  "footer.contact.title": "Contact",
-  "footer.contact.email": "info@optimaai.co",
-  "footer.contact.phone": "+491622968335",
-  "footer.location": "Based in Germany, operating across Europe",
-  "footer.newsletter.title": "Newsletter",
-  "footer.newsletter.description": "Subscribe to our newsletter for the latest updates and insights.",
-  "footer.newsletter.placeholder": "Your Email Address",
-  "footer.newsletter.button": "Subscribe",
-  "footer.copyright": "© 2025 Optima AI Solutions. All Rights Reserved.",
-  "chatbot.greeting": "Try me out! 👋",
-  "chatbot.button": "💬 Chat with our AI Agent",
-  "cookies.text": "We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies.",
-  "cookies.button": "Accept Cookies"
+  "nav": {
+    "home": "Home",
+    "about": "About",
+    "services": "Services",
+    "howitworks": "How It Works",
+    "casestudy": "Case Study",
+    "contact": "Contact"
+  },
+  "hero": {
+    "title": "Save Time and Boost Revenue with WhatsApp Automation for Hotels & Restaurants",
+    "subtitle": "Reduce staff workload, enhance guest experience, and grow revenue with intelligent WhatsApp automation",
+    "cta": {
+      "primary": "Start Your Free Trial",
+      "secondary": "See How It Works"
+    },
+    "stats": {
+      "response": {
+        "value": "85%",
+        "label": "Faster Response Time"
+      },
+      "support": {
+        "value": "24/7",
+        "label": "Customer Support"
+      },
+      "bookings": {
+        "value": "60%",
+        "label": "More Bookings"
+      }
+    }
+  },
+  "about": {
+    "title": "About Us",
+    "description": "At Optima AI Solutions, we empower hotels and restaurants to thrive in a fast-paced world. We combine industry knowledge with cutting-edge WhatsApp automation to streamline operations, boost revenue, and enhance guest satisfaction across Europe.",
+    "mission": {
+      "title": "Our Mission",
+      "text": "Simplify hospitality operations, boost revenue, and enhance guest experiences through WhatsApp automation—leaving you free to focus on creating memorable experiences for your guests."
+    }
+  },
+  "services": {
+    "title": "Our Services",
+    "whatsapp": {
+      "title": "WhatsApp Automation",
+      "tag": "Message Integration",
+      "question": "Struggling to retain customers?",
+      "description": "Send automated reminders, personalized offers, and feedback requests via WhatsApp to increase repeat visits and attract new guests with targeted campaigns for hotels and restaurants.",
+      "features": [
+        "Automated Updates",
+        "Personalized Offers",
+        "Feedback Collection",
+        "Guest Re-engagement",
+        "Campaign Management",
+        "Performance Tracking"
+      ]
+    },
+    "startFreeTrial": "Start Your Free Trial",
+    "messageIntegration": "Message Integration"
+  },
+  "howItWorks": {
+    "title": "How It Works",
+    "steps": {
+      "consultation": {
+        "title": "Consultation",
+        "description": "We analyze your hotel or restaurant's unique challenges and goals."
+      },
+      "customization": {
+        "title": "Customization",
+        "description": "Our team tailors WhatsApp automation to fit your operations seamlessly."
+      },
+      "implementation": {
+        "title": "Implementation",
+        "description": "We integrate WhatsApp automation with minimal disruption."
+      },
+      "optimization": {
+        "title": "Optimization",
+        "description": "Ongoing support ensures your WhatsApp tools evolve with your business."
+      }
+    }
+  },
+  "caseStudy": {
+    "title": "Success Stories",
+    "subtitle": "How leading hotels and restaurants across Europe transformed their operations with WhatsApp automation, handling millions of guest interactions annually",
+    "challenges": {
+      "title": "The Challenges",
+      "items": {
+        "waitTimes": {
+          "title": "Long Wait Times",
+          "description": "Guests waiting up to 15 minutes for basic service requests"
+        },
+        "staffOverwhelm": {
+          "title": "Staff Overwhelm",
+          "description": "Teams struggling to manage peak season demand"
+        },
+        "missedOpportunities": {
+          "title": "Missed Opportunities",
+          "description": "Lost revenue from unanswered messages and delayed responses"
+        }
+      }
+    },
+    "solution": {
+      "title": "Our Solution",
+      "items": {
+        "whatsapp": {
+          "title": "WhatsApp Automation",
+          "description": "24/7 instant guest service via messaging"
+        }
+      }
+    },
+    "results": {
+      "title": "Remarkable Results",
+      "stats": {
+        "response": {
+          "value": "85%",
+          "label": "Faster Response",
+          "detail": "From 10+ mins to 90 seconds"
+        },
+        "bookings": {
+          "value": "60%",
+          "label": "More Bookings",
+          "detail": "In first quarter"
+        },
+        "satisfaction": {
+          "value": "70%",
+          "label": "Increase in Guest Satisfaction",
+          "detail": "Through personalized service"
+        },
+        "savings": {
+          "value": "€250,000",
+          "label": "Annual Savings",
+          "detail": "In operational costs"
+        }
+      }
+    },
+    "benefits": {
+      "title": "Key Benefits",
+      "items": {
+        "operational": {
+          "title": "Operational Excellence",
+          "description": "Dramatic reduction in response times and workload"
+        },
+        "revenue": {
+          "title": "Revenue Growth",
+          "description": "Significant increase in bookings and guest retention"
+        },
+        "experience": {
+          "title": "Enhanced Experience",
+          "description": "Better guest satisfaction and staff efficiency"
+        }
+      }
+    }
+  },
+  "contact": {
+    "title": "Contact Us",
+    "subtitle": "Ready to automate your business? Let's talk.",
+    "form": {
+      "name": "Your Name",
+      "email": "Your Email",
+      "restaurant": "Hotel or Restaurant Name",
+      "message": "Your Message",
+      "submit": "Schedule a Free Consultation",
+      "success": "Message Sent!"
+    },
+    "whyChooseUs": {
+      "title": "Why Choose Us?",
+      "support": {
+        "title": "24/7 Support",
+        "description": "Our team is always here to help you succeed"
+      },
+      "expertise": {
+        "title": "Expert Guidance",
+        "description": "Get personalized solutions for your business"
+      }
+    }
+  },
+  "cookies": {
+    "text": "We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies.",
+    "learnMore": "Learn more",
+    "accept": "Accept Cookies"
+  },
+  "chatbot": {
+    "greeting": "Try me out! 👋",
+    "prompt": "Hello! How can I help you today?",
+    "start": "Start a conversation",
+    "placeholder": "Type your message...",
+    "error": "Sorry, I'm having trouble connecting. Please try again."
+  },
+  "footer": {
+    "description": "Transforming hotels and restaurants with WhatsApp automation solutions that enhance guest experience and streamline operations.",
+    "quickLinks": {
+      "title": "Quick Links"
+    },
+    "contact": {
+      "title": "Contact"
+    },
+    "location": "Based in Germany, serving all of Europe",
+    "newsletter": {
+      "title": "Newsletter",
+      "description": "Subscribe to our newsletter for the latest updates and insights.",
+      "placeholder": "Your email address",
+      "button": "Subscribe",
+      "success": "Thank you for subscribing!"
+    },
+    "rights": "All rights reserved."
+  }
 }
